change border to outline - to fix issue of background image bleeding into border

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -6,12 +6,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: - ( ($profile-pic-size + $profile-border-size ) / 2);
+        margin-top: - ( ($profile-pic-size + $profile-outline-size ) / 2);
         margin-bottom: 25px;
     }
 
     &__pic {
-        border: $profile-border-size solid white;
+        outline: white solid $profile-outline-size;
         border-radius: 50%;
         margin-bottom: 20px;
     }
