--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,4 +13,4 @@ $font-normal: 400;
 $font-bold:700;
 
 $profile-pic-size: 96px;
-$profile-border-size: 5px;
+$profile-outline-size: 5px;
